update tsconfig && add new colors

--- a/example/compile_test.html
+++ b/example/compile_test.html
@@ -10,7 +10,7 @@ start from scratch if you know enough to be dangerous. Have fun!
 -->
 <div class="windi-1gf6vys">
 <div class="windi-q82fgh">
-  <div class="windi-q7smbe from-cyan-400 to-light-blue-500"></div>
+  <div class="windi-q7smbe"></div>
   <div class="windi-14r5bq6">
     <div class="windi-167416x">
       <div>
@@ -22,7 +22,7 @@ start from scratch if you know enough to be dangerous. Have fun!
           <ul class="windi-s8hihr">
             <li class="windi-1hnmgx3">
               <span class="windi-1lmvnyd">
-                <svg class="windi-1qwji6h text-cyan-500" viewBox="0 0 20 20" fill="currentColor">
+                <svg class="windi-1qwji6h" viewBox="0 0 20 20" fill="currentColor">
                   <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
                 </svg>
               </span>
@@ -33,7 +33,7 @@ start from scratch if you know enough to be dangerous. Have fun!
             </li>
             <li class="windi-1hnmgx3">
               <span class="windi-1lmvnyd">
-                <svg class="windi-1qwji6h text-cyan-500" viewBox="0 0 20 20" fill="currentColor">
+                <svg class="windi-1qwji6h" viewBox="0 0 20 20" fill="currentColor">
                   <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
                 </svg>
               </span>
@@ -44,7 +44,7 @@ start from scratch if you know enough to be dangerous. Have fun!
             </li>
             <li class="windi-1hnmgx3">
               <span class="windi-1lmvnyd">
-                <svg class="windi-1qwji6h text-cyan-500" viewBox="0 0 20 20" fill="currentColor">
+                <svg class="windi-1qwji6h" viewBox="0 0 20 20" fill="currentColor">
                   <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
                 </svg>
               </span>
@@ -56,7 +56,7 @@ start from scratch if you know enough to be dangerous. Have fun!
         <div class="windi-1ix4odl">
           <p>Want to dig deeper into Tailwind?</p>
           <p>
-            <a href="https://tailwindcss.com/docs" class=" text-cyan-600 hover:text-cyan-700"> Read the docs &rarr; </a>
+            <a href="https://tailwindcss.com/docs" class="windi-rbjv15"> Read the docs &rarr; </a>
           </p>
         </div>
       </div>
