--- a/test/assets/example2.html
+++ b/test/assets/example2.html
@@ -1,19 +1,19 @@
-<div class="container min-h-screen bg-gray-100 py-6 flex flex-col justify-center sm:py-12 md:py-0 lg:py-2 xl:py-4">
-  <div class="relative py-3 sm:max-w-xl sm:mx-auto">
-    <div class="absolute inset-0 bg-gradient-to-r from-cyan-400 to-light-blue-500 shadow-lg transform -skew-y-6 sm:skew-y-0 sm:-rotate-6 sm:rounded-3xl">
+<div container="~" min-h="screen" bg="gray-100" flex="~ col" justify="center" p="y-6 sm:y-12 md:y-0 lg:y-2 xl:y-4">
+  <div position="relative" max-w="sm:xl" p="y-3" m="sm:x-auto">
+    <div position="absolute inset-0" gradient="to-r from-cyan-400 to-light-blue-500" shadow="lg" transform="~ -skew-y-6 sm:skew-y-0 sm:-rotate-6" border="sm:rounded-3xl">
     </div>
-    <div class="relative px-4 py-10 bg-white shadow-lg sm:rounded-3xl sm:p-20">
-      <div class="max-w-md mx-auto">
+    <div position="relative" p="x-4 y-10 sm:20" bg="white" shadow="lg" border="sm:rounded-3xl">
+      <div m="x-auto" max-w="md">
         <div>
-          <img src="/img/logo.svg" class="h-7 sm:h-8" />
+          <img src="/img/logo.svg" h="7 sm:8"/>
         </div>
-        <div class="divide-y divide-gray-200">
-          <div class="py-8 text-base leading-6 space-y-4 text-gray-700 sm:text-lg sm:leading-7">
+        <div divide="y gray-200">
+          <div text="base sm:lg gray-700" font="leading-6 sm:leading-7" p="y-8" space="y-4">
             <p>An advanced online playground for Tailwind CSS, including support for things like:</p>
-            <ul class="list-disc space-y-2">
-              <li class="flex items-start">
-                <span class="h-6 flex items-center sm:h-7">
-                  <svg class="flex-shrink-0 h-5 w-5 text-cyan-500" viewBox="0 0 20 20" fill="currentColor">
+            <ul list="disc" space="y-2">
+              <li flex="~" items="start">
+                <span h="6 sm:7" flex="~" items="center">
+                  <svg flex="shrink-0" h="5" w="5" text="cyan-500" viewBox="0 0 20 20" fill="currentColor">
                     <path fill-rule="evenodd"
                       d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
                       clip-rule="evenodd" />
@@ -24,37 +24,37 @@
                   <code class="text-sm font-bold text-gray-900">tailwind.config.js</code> file
                 </p>
               </li>
-              <li class="flex items-start">
-                <span class="h-6 flex items-center sm:h-7">
-                  <svg class="flex-shrink-0 h-5 w-5 text-cyan-500" viewBox="0 0 20 20" fill="currentColor">
+              <li flex="~" items="start">
+                <span flex="~" items="center" h="6 sm:7">
+                  <svg flex="shrink-0" h="5" w="5" text="cyan-500" viewBox="0 0 20 20" fill="currentColor">
                     <path fill-rule="evenodd"
                       d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
                       clip-rule="evenodd" />
                   </svg>
                 </span>
-                <p class="ml-2">
+                <p m="l-2">
                   Extracting classes with
-                  <code class="text-sm font-bold text-gray-900">@apply</code>
+                  <code font="bold" text="sm gray-900">@apply</code>
                 </p>
               </li>
-              <li class="flex items-start">
-                <span class="h-6 flex items-center sm:h-7">
+              <li flex="~" items="start">
+                <span flex="~" items="center" h="6 sm:7">
                   <svg class="flex-shrink-0 h-5 w-5 text-cyan-500" viewBox="0 0 20 20" fill="currentColor">
                     <path fill-rule="evenodd"
                       d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
                       clip-rule="evenodd" />
                   </svg>
                 </span>
-                <p class="ml-2">Code completion with instant preview</p>
+                <p m="l-2">Code completion with instant preview</p>
               </li>
             </ul>
             <p>Perfect for learning how the framework works, prototyping a new idea, or creating a demo to share online.
             </p>
           </div>
-          <div class="pt-6 text-base leading-6 font-bold sm:text-lg sm:leading-7">
+          <div text="base sm:lg" p="t-6" font="bold leading-6 sm:leading-7">
             <p>Want to dig deeper into Tailwind?</p>
             <p>
-              <a href="https://tailwindcss.com/docs" class="text-cyan-600 hover:text-cyan-700"> Read the docs &rarr;
+              <a href="https://tailwindcss.com/docs" text="cyan-600 hover:cyan-700"> Read the docs &rarr;
               </a>
             </p>
           </div>
