feat: support html parser parse attrs

--- a/test/assets/example2.html
+++ b/test/assets/example2.html
@@ -11,9 +11,9 @@
           <div text="base sm:lg gray-700" font="leading-6 sm:leading-7" p="y-8" space="y-4">
             <p>An advanced online playground for Tailwind CSS, including support for things like:</p>
             <ul list="disc" space="y-2">
-              <li flex="~" items="start">
+              <li flex=~ items="start">
                 <span h="6 sm:7" flex="~" items="center">
-                  <svg flex="shrink-0" h="5" w="5" text="cyan-500" viewBox="0 0 20 20" fill="currentColor">
+                  <svg flex="shrink-0" h=5 w=5 text="cyan-500" viewBox="0 0 20 20" fill="currentColor">
                     <path fill-rule="evenodd"
                       d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
                       clip-rule="evenodd" />
@@ -26,13 +26,13 @@
               </li>
               <li flex="~" items="start">
                 <span flex="~" items="center" h="6 sm:7">
-                  <svg flex="shrink-0" h="5" w="5" text="cyan-500" viewBox="0 0 20 20" fill="currentColor">
+                  <svg flex="shrink-0" h=5 w=5 text=cyan-500 viewBox="0 0 20 20" fill="currentColor">
                     <path fill-rule="evenodd"
                       d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
                       clip-rule="evenodd" />
                   </svg>
                 </span>
-                <p m="l-2">
+                <p m=l-2>
                   Extracting classes with
                   <code font="bold" text="sm gray-900">@apply</code>
                 </p>
