refactor: rewrite html parse classes method

--- a/test/assets/example.html
+++ b/test/assets/example.html
@@ -45,7 +45,7 @@
                       clip-rule="evenodd" />
                   </svg>
                 </span>
-                <p class="ml-2">Code completion with instant preview</p>
+                <p class=ml-2>Code completion with instant preview</p>
               </li>
             </ul>
             <p>Perfect for learning how the framework works, prototyping a new idea, or creating a demo to share online.
