feat: add attributify mode example

--- a/test/assets/example2.html
+++ b/test/assets/example2.html
@@ -1,9 +1,9 @@
 <div container="~" min-h="screen" bg="gray-100" flex="~ col" justify="center" p="y-6 sm:y-12 md:y-0 lg:y-2 xl:y-4">
-  <div position="relative" max-w="sm:xl" p="y-3" m="sm:x-auto">
-    <div position="absolute inset-0" gradient="to-r from-cyan-400 to-light-blue-500" shadow="lg" transform="~ -skew-y-6 sm:skew-y-0 sm:-rotate-6" border="sm:rounded-3xl">
+  <div pos="relative" w="sm:max-xl" p="y-3" m="sm:x-auto">
+    <div pos="absolute inset-0" gradient="to-r from-cyan-400 to-light-blue-500" shadow="lg" transform="~ -skew-y-6 sm:skew-y-0 sm:-rotate-6" border="sm:rounded-3xl">
     </div>
-    <div position="relative" p="x-4 y-10 sm:20" bg="white" shadow="lg" border="sm:rounded-3xl">
-      <div m="x-auto" max-w="md">
+    <div pos="relative" p="x-4 y-10 sm:20" bg="white" shadow="lg" border="sm:rounded-3xl">
+      <div m="x-auto" w="max-md">
         <div>
           <img src="/img/logo.svg" h="7 sm:8"/>
         </div>
