style: windi comment update

--- a/test/assets/example.html
+++ b/test/assets/example.html
@@ -9,7 +9,7 @@
         </div>
         <div class="divide-y divide-gray-200">
           <div class="py-8 text-base leading-6 space-y-4 text-gray-700 sm:text-lg sm:leading-7">
-            <p>An advanced online playground for Tailwind CSS, including support for things like:</p>
+            <p>An advanced online playground for Windi CSS, including support for things like:</p>
             <ul class="list-disc space-y-2">
               <li class="flex items-start">
                 <span class="h-6 flex items-center sm:h-7">
@@ -21,7 +21,7 @@
                 </span>
                 <p class="ml-2">
                   Customizing your
-                  <code class="text-sm font-bold text-gray-900">tailwind.config.js</code> file
+                  <code class="text-sm font-bold text-gray-900">windi.config.js</code> file
                 </p>
               </li>
               <li class="flex items-start">
@@ -52,9 +52,9 @@
             </p>
           </div>
           <div class="pt-6 text-base leading-6 font-bold sm:text-lg sm:leading-7">
-            <p>Want to dig deeper into Tailwind?</p>
+            <p>Want to dig deeper into Windi?</p>
             <p>
-              <a href="https://tailwindcss.com/docs" class="text-cyan-600 hover:text-cyan-700"> Read the docs &rarr;
+              <a href="https://windicss.org/utilities" class="text-cyan-600 hover:text-cyan-700"> Read the docs &rarr;
               </a>
             </p>
           </div>
