--- a/test/assets/example2.html
+++ b/test/assets/example2.html
@@ -9,7 +9,7 @@
         </div>
         <div divide="y gray-200">
           <div text="base sm:lg gray-700" font="leading-6 sm:leading-7" p="y-8" space="y-4">
-            <p>An advanced online playground for Tailwind CSS, including support for things like:</p>
+            <p>An advanced online playground for Windi CSS, including support for things like:</p>
             <ul list="disc" space="y-2">
               <li flex=~ items="start">
                 <span h="6 sm:7" flex="~" items="center">
@@ -21,7 +21,7 @@
                 </span>
                 <p class="ml-2">
                   Customizing your
-                  <code class="text-sm font-bold text-gray-900">tailwind.config.js</code> file
+                  <code class="text-sm font-bold text-gray-900">windi.config.js</code> file
                 </p>
               </li>
               <li flex="~" items="start">
@@ -52,9 +52,9 @@
             </p>
           </div>
           <div text="base sm:lg" p="t-6" font="bold leading-6 sm:leading-7">
-            <p>Want to dig deeper into Tailwind?</p>
+            <p>Want to dig deeper into Windi?</p>
             <p>
-              <a href="https://tailwindcss.com/docs" text="cyan-600 hover:cyan-700"> Read the docs &rarr;
+              <a href="https://windicss.org/utilities" text="cyan-600 hover:cyan-700"> Read the docs &rarr;
               </a>
             </p>
           </div>
